--- a/doc/serveradmin.adoc
+++ b/doc/serveradmin.adoc
@@ -11,10 +11,13 @@
 
 * Operating system: Linux
 * Database system: https://www.postgresql.org/[PostgreSQL] 15 or later
-* To build from source, these may have to be installed:
-** https://go.dev/[Go] 1.24 or later
-** https://www.colm.net/open-source/ragel/[Ragel] 6
+* To build from source, these dependencies should be installed:
 ** https://gcc.gnu.org/[GCC C compiler] 9 or later
+** https://www.colm.net/open-source/ragel/[Ragel] 6
+** https://go.dev/[Go] 1.24 or later
+
+In Debian 12, GCC and Ragel can be installed using `apt install gcc
+ragel`, but Go has to be downloaded from https://go.dev/[go.dev].
 
 ==== PostgreSQL configuration
 
