--- a/doc/userguide.adoc
+++ b/doc/userguide.adoc
@@ -5,14 +5,15 @@ databases and the basics of SQL.
 
 === Getting started
 
-Metadb extends PostgreSQL with features to support analytics such as
-streaming data sources, data model transforms, and historical data.
-The data contained in the Metadb database originally come from another
-place: a *data source* which could be, for example, a
-transaction-processing database or a sensor network.  Metadb updates
-its database continuously based on state changes in an external data
-source.  Also part of the design of Metadb is to support multiple data
-sources, although this is not yet fully implemented.
+Metadb is a system for synchronizing databases for analytics
+applications.  It extends PostgreSQL with features such as streaming
+data sources, data model transforms, and historical data.  The data
+contained in the Metadb database originally come from another place: a
+*data source* which could be, for example, a transaction-processing
+database or a sensor network.  Metadb updates its database
+continuously based on state changes in an external data source.  Also
+part of the design of Metadb is to support multiple data sources,
+although this is not yet fully implemented.
 
 === Main tables
 
